[package]
name = "squawk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
jsonrpsee = { version = "0.25.1", features = ["async-client", "client-core", "http-client"] }
lsp-client = "0.1.0"
lsp-types = "0.97.0"
regex-lite = "0.1.6"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter = "0.25.6"
tree-sitter-go = "0.23.4"
